// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Header ECL renders correctly 1`] = `
<jest>
  <header>
    <!-- header -->
    <div
      class="container"
    >
      <div
        class="oe-header"
      >
        <a
          class="navbar-brand"
          href="#"
        >
          <img
            height="60"
            src="https://ec.europa.eu/info/sites/info/themes/europa/images/svg/logo/logo--en.svg"
            width="240"
          />
        </a>
        <ul
          class="nav"
        >
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              data-bs-target="#loginModal"
              data-bs-toggle="modal"
              href="Log"
              in=""
              role="button"
            >
              
            Log in
          
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              data-bs-target="#languageModal"
              data-bs-toggle="modal"
              href="English"
              role="button"
            >
              
            English
          
            </a>
          </li>
        </ul>
      </div>
    </div>
    <!-- navbar -->
    <nav
      class="navbar navbar-expand-lg oe-header__navbar navbar-dark"
    >
      <div
        class="container"
      >
        <button
          aria-controls="navbarNavDropdown"
          aria-expanded="false"
          aria-label="Toggle navigation"
          class="navbar-toggler"
          data-bs-target="#navbarNavDropdown"
          data-bs-toggle="collapse"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="collapse navbar-collapse"
          id="navbarNavDropdown"
        >
          <ul
            class="navbar-nav"
          >
            <li
              class="nav-item"
            >
              <a
                aria-current="page"
                class="nav-link active"
                href="/example"
              >
                Home
              </a>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="nav-link"
                href="/example"
              >
                Item 01
              </a>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="nav-link"
                href="/example"
              >
                Item 02
              </a>
            </li>
            <li
              class="nav-item dropdown"
            >
              <a
                aria-expanded="false"
                class="nav-link dropdown-toggle"
                data-bs-toggle="dropdown"
                href="#"
                id="navbarDropdownMenuLink"
                role="button"
              >
                Dropdown link
              </a>
              <ul
                aria-labelledby="navbarDropdownMenuLink"
                class="dropdown-menu"
              >
                <li>
                  <a
                    class="dropdown-item"
                    href="/example.html"
                  >
                    Action
                  </a>
                </li>
                <li>
                  <a
                    class="dropdown-item"
                    href="/example.html"
                  >
                    Another action
                  </a>
                </li>
                <li>
                  <a
                    class="dropdown-item"
                    href="/example.html"
                  >
                    Something else here
                  </a>
                </li>
              </ul>
            </li>
          </ul>
        </div>
      </div>
    </nav>
  </header>
  <!-- Modal - Login -->
  <div
    aria-hidden="true"
    aria-labelledby="loginModalLabel"
    class="modal fade"
    id="loginModal"
    tabindex="-1"
  >
    <div
      class="modal-dialog "
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <h5
            class="modal-title"
            id="loginModalLabel"
          >
            Log in
          </h5>
          <button
            aria-label="Close"
            class="btn-close"
            data-bs-dismiss="modal"
            type="button"
          />
        </div>
        <div
          class="modal-body"
        >
          <h5>
            Disclaimer 1
          </h5>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum accumsan eget orci eu aliquet. Suspendisse potenti. Integer volutpat, nisl et placerat tincidunt
          </p>
          <h5>
            Disclaimer 2
          </h5>
          <p>
            Duis bibendum tristique lobortis. Nam luctus nisi sit amet turpis faucibus, ut dapibus elit sollicitudin. Phasellus a massa magna. Nullam ac imperdiet leo.
          </p>
        </div>
        <div
          class="modal-footer"
        >
          <button
            class="btn btn-secondary"
            data-bs-dismiss="modal"
            type="button"
          >
            Close
          </button>
          <button
            class="btn btn-primary"
            type="button"
          >
            Access EU login
          </button>
        </div>
      </div>
    </div>
  </div>
  <!-- Modal - Language -->
  <div
    aria-hidden="true"
    aria-labelledby="languageModalLabel"
    class="oe-language modal fade"
    id="languageModal"
    tabindex="-1"
  >
    <div
      class="modal-dialog modal-fullscreen"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <h5
            class="modal-title"
            id="languageeModalLabel"
          >
            Select your language
          </h5>
          <button
            aria-label="Close"
            class="btn-close"
            data-bs-dismiss="modal"
            type="button"
          />
        </div>
        <div
          class="modal-body"
        >
          <div
            class="container"
          >
            <div
              class="row"
            >
              <div
                class="col col-lg-8 offset-lg-2"
              >
                <h5
                  class="oe-language__title"
                >
                  EU official languages
                </h5>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="col col-lg-4 offset-lg-2"
              >
                <div
                  class="oe-language__list"
                >
                  <a
                    class="oe-language__item"
                    href="#"
                  >
                    Language 01
                  </a>
                  <a
                    class="oe-language__item"
                    href="#"
                  >
                    Language 02
                  </a>
                  <a
                    class="oe-language__item"
                    href="#"
                  >
                    Language 03
                  </a>
                </div>
              </div>
              <div
                class="col col-lg-4"
              >
                <div
                  class="oe-language__list"
                >
                  <a
                    class="oe-language__item"
                    href="#"
                  >
                    Language 04
                  </a>
                  <a
                    class="oe-language__item"
                    href="#"
                  >
                    Language 05
                  </a>
                  <a
                    class="oe-language__item"
                    href="#"
                  >
                    Language 06
                  </a>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="col col-lg-8 offset-lg-2"
              >
                <h5
                  class="oe-language__title"
                >
                  Non EU languages
                </h5>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="col col-lg-4 offset-lg-2"
              >
                <div
                  class="oe-language__list"
                >
                  <a
                    class="oe-language__item"
                    href="#"
                  >
                    Language 07
                  </a>
                  <a
                    class="oe-language__item"
                    href="#"
                  >
                    Language 08
                  </a>
                </div>
              </div>
              <div
                class="col col-lg-4"
              >
                <div
                  class="oe-language__list"
                >
                  <a
                    class="oe-language__item"
                    href="#"
                  >
                    Language 09
                  </a>
                  <a
                    class="oe-language__item"
                    href="#"
                  >
                    Language 10
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="modal-footer"
        >
          <button
            class="btn btn-secondary"
            data-bs-dismiss="modal"
            type="button"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Header renders correctly 1`] = `
<jest>
  <header>
    <!-- header -->
    <div
      class="container"
    >
      <div
        class="oe-header"
      >
        <a
          class="navbar-brand"
          href="#"
        >
          <img
            height="60"
            src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Placeholder_view_vector.svg/638px-Placeholder_view_vector.svg.png"
            width="100"
          />
        </a>
        <ul
          class="nav"
        >
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              data-bs-target="#loginModal"
              data-bs-toggle="modal"
              href="Log"
              in=""
              role="button"
            >
              
            Log in
          
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              data-bs-target="#languageModal"
              data-bs-toggle="modal"
              href="English"
              role="button"
            >
              
            English
          
            </a>
          </li>
        </ul>
      </div>
    </div>
    <!-- navbar -->
    <nav
      class="navbar navbar-expand-lg oe-header__navbar navbar-light"
    >
      <div
        class="container"
      >
        <button
          aria-controls="navbarNavDropdown"
          aria-expanded="false"
          aria-label="Toggle navigation"
          class="navbar-toggler"
          data-bs-target="#navbarNavDropdown"
          data-bs-toggle="collapse"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="collapse navbar-collapse"
          id="navbarNavDropdown"
        >
          <ul
            class="navbar-nav"
          >
            <li
              class="nav-item"
            >
              <a
                aria-current="page"
                class="nav-link active"
                href="/example"
              >
                Home
              </a>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="nav-link"
                href="/example"
              >
                Item 01
              </a>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="nav-link"
                href="/example"
              >
                Item 02
              </a>
            </li>
            <li
              class="nav-item dropdown"
            >
              <a
                aria-expanded="false"
                class="nav-link dropdown-toggle"
                data-bs-toggle="dropdown"
                href="#"
                id="navbarDropdownMenuLink"
                role="button"
              >
                Dropdown link
              </a>
              <ul
                aria-labelledby="navbarDropdownMenuLink"
                class="dropdown-menu"
              >
                <li>
                  <a
                    class="dropdown-item"
                    href="/example.html"
                  >
                    Action
                  </a>
                </li>
                <li>
                  <a
                    class="dropdown-item"
                    href="/example.html"
                  >
                    Another action
                  </a>
                </li>
                <li>
                  <a
                    class="dropdown-item"
                    href="/example.html"
                  >
                    Something else here
                  </a>
                </li>
              </ul>
            </li>
          </ul>
        </div>
      </div>
    </nav>
  </header>
  <!-- Modal - Login -->
  <div
    aria-hidden="true"
    aria-labelledby="loginModalLabel"
    class="modal fade"
    id="loginModal"
    tabindex="-1"
  >
    <div
      class="modal-dialog "
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <h5
            class="modal-title"
            id="loginModalLabel"
          >
            Log in
          </h5>
          <button
            aria-label="Close"
            class="btn-close"
            data-bs-dismiss="modal"
            type="button"
          />
        </div>
        <div
          class="modal-body"
        >
          <h5>
            Disclaimer 1
          </h5>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum accumsan eget orci eu aliquet. Suspendisse potenti. Integer volutpat, nisl et placerat tincidunt
          </p>
          <h5>
            Disclaimer 2
          </h5>
          <p>
            Duis bibendum tristique lobortis. Nam luctus nisi sit amet turpis faucibus, ut dapibus elit sollicitudin. Phasellus a massa magna. Nullam ac imperdiet leo.
          </p>
        </div>
        <div
          class="modal-footer"
        >
          <button
            class="btn btn-secondary"
            data-bs-dismiss="modal"
            type="button"
          >
            Close
          </button>
          <button
            class="btn btn-primary"
            type="button"
          >
            Access EU login
          </button>
        </div>
      </div>
    </div>
  </div>
  <!-- Modal - Language -->
  <div
    aria-hidden="true"
    aria-labelledby="languageModalLabel"
    class="oe-language modal fade"
    id="languageModal"
    tabindex="-1"
  >
    <div
      class="modal-dialog modal-fullscreen"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <h5
            class="modal-title"
            id="languageeModalLabel"
          >
            Select your language
          </h5>
          <button
            aria-label="Close"
            class="btn-close"
            data-bs-dismiss="modal"
            type="button"
          />
        </div>
        <div
          class="modal-body"
        >
          <div
            class="container"
          >
            <div
              class="row"
            >
              <div
                class="col col-lg-8 offset-lg-2"
              >
                <h5
                  class="oe-language__title"
                >
                  EU official languages
                </h5>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="col col-lg-4 offset-lg-2"
              >
                <div
                  class="oe-language__list"
                >
                  <a
                    class="oe-language__item"
                    href="#"
                  >
                    Language 01
                  </a>
                  <a
                    class="oe-language__item"
                    href="#"
                  >
                    Language 02
                  </a>
                  <a
                    class="oe-language__item"
                    href="#"
                  >
                    Language 03
                  </a>
                </div>
              </div>
              <div
                class="col col-lg-4"
              >
                <div
                  class="oe-language__list"
                >
                  <a
                    class="oe-language__item"
                    href="#"
                  >
                    Language 04
                  </a>
                  <a
                    class="oe-language__item"
                    href="#"
                  >
                    Language 05
                  </a>
                  <a
                    class="oe-language__item"
                    href="#"
                  >
                    Language 06
                  </a>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="col col-lg-8 offset-lg-2"
              >
                <h5
                  class="oe-language__title"
                >
                  Non EU languages
                </h5>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="col col-lg-4 offset-lg-2"
              >
                <div
                  class="oe-language__list"
                >
                  <a
                    class="oe-language__item"
                    href="#"
                  >
                    Language 07
                  </a>
                  <a
                    class="oe-language__item"
                    href="#"
                  >
                    Language 08
                  </a>
                </div>
              </div>
              <div
                class="col col-lg-4"
              >
                <div
                  class="oe-language__list"
                >
                  <a
                    class="oe-language__item"
                    href="#"
                  >
                    Language 09
                  </a>
                  <a
                    class="oe-language__item"
                    href="#"
                  >
                    Language 10
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="modal-footer"
        >
          <button
            class="btn btn-secondary"
            data-bs-dismiss="modal"
            type="button"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</jest>
`;
